preavaluacio_dades.xlsx

--- a/index.html
+++ b/index.html
@@ -411,9 +411,10 @@ const config = {
     professors: "Professors"
   },
 
+
   // Fitxer amb les preavaluacions guardades
-  preFilePath: "/tutoria/Preavaluacio/preavaluacions.xlsx",
-  preTableName: "Preavaluacions"
+  preFilePath: "/tutoria/Preavaluacio/preavaluacio_dades.xlsx",
+  preTableName: "Respostes"
 };
 
 /* ========= MSAL + GRAPH ========= */
