--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="preconnect" href="https://alcdn.msauth.net">
   <script src="https://alcdn.msauth.net/browser/2.38.0/js/msal-browser.min.js"></script>
-  <script src="config-preavaluacio.js"></script>
+  <script src="./js/config-preavaluacio.js"></script>
   <style>
     :root{
       --bg:#f6f7fb; --card:#ffffff; --bd:#e7e7ea; --text:#111; --muted:#667085;
